<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/window_background"
    tools:context="de.thbingen.movs.lukas.a4gewinntspezial.activities.OnlineActivity">


    <!--Die Oberen 40% des Bildschirms stellen lediglich das App-Logo dar-->
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageView_applogo"
        app:layout_constraintBottom_toTopOf="@+id/guideline_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/app_logo" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        tools:layout_editor_absoluteY="263dp"
        tools:layout_editor_absoluteX="0dp" />


    <!--In der unteren Hälfte findet der jeweilige Spieler die Schaltflächen zum Starten des Spiels bzw.-->
    <!--zum Einsehen der Highscores und eine Möglichkeit zur Eingabe seines Spielername-->
    <de.thbingen.movs.lukas.a4gewinntspezial.custom.CustomEditText
        android:id="@+id/editText_thisPlayer"
        style="@style/EditTextPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/editText_thisPlayer"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryTransparent"
        app:exchangeColor="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:standardColor="@color/colorPrimaryTransparent"
        app:layout_constraintTop_toTopOf="@+id/guideline_1"
        android:layout_marginTop="0dp" />

    <co.ceryle.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/segmentedControl_hostOrClient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:focusableInTouchMode="true"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:sbg_borderColor="@color/colorPrimaryDark"
        app:sbg_borderSize="2dp"
        app:sbg_dividerSize="0dp"
        app:sbg_position="0"
        app:sbg_radius="30dp"
        app:sbg_rippleColor="@color/colorPrimaryTransparent"
        app:sbg_selectorColor="@color/colorPrimary"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_thisPlayer">

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/button_segmentedControlPadding"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/button_host"
            android:drawableStart="@drawable/server"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_startActivityText"
            app:sb_selectedImageTint="@android:color/white"
            app:sb_selectedTextColor="@android:color/white" />

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/button_segmentedControlPadding"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/button_client"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_startActivityText"
            android:drawableStart="@drawable/client"
            app:sb_selectedImageTint="@android:color/white"
            app:sb_selectedTextColor="@android:color/white" />

    </co.ceryle.segmentedbutton.SegmentedButtonGroup>

    <Button
        android:id="@+id/button_startOnline"
        style="@style/ButtonStartActivity"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_start"
        android:visibility="invisible"
        android:drawableStart="@drawable/start"
        android:drawableEnd="@drawable/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segmentedControl_hostOrClient" />

</android.support.constraint.ConstraintLayout>
