<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/cardView_leftRightMargin"
    android:layout_marginLeft="@dimen/cardView_leftRightMargin"
    android:layout_marginRight="@dimen/cardView_leftRightMargin"
    android:layout_marginTop="@dimen/cardView_leftRightMargin"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:cardElevation="@dimen/cardView_elevation"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_victories"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|end"
            android:text="@string/textView_score"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textView_score"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toLeftOf="@+id/guideline_0"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_draws"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|end"
            android:text="@string/textView_score"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textView_score"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toLeftOf="@+id/guideline_0"
            card_view:layout_constraintTop_toBottomOf="@+id/textView_victories" />

        <TextView
            android:id="@+id/textView_losses"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|end"
            android:text="@string/textView_score"
            android:textColor="@color/colorPrimaryTransparent"
            android:textSize="@dimen/textView_score"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toLeftOf="@+id/guideline_0"
            card_view:layout_constraintTop_toBottomOf="@+id/textView_draws"
            card_view:layout_constraintVertical_bias="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.15" />

        <ImageView
            android:id="@+id/imageView_victories"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/imageView_victory"
            card_view:layout_constraintBottom_toBottomOf="@+id/textView_victories"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="@+id/guideline_0"
            card_view:layout_constraintRight_toLeftOf="@+id/guideline_1"
            card_view:layout_constraintTop_toTopOf="@+id/textView_victories"
            card_view:srcCompat="@drawable/victory" />

        <ImageView
            android:id="@+id/imageView_draws"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/imageView_losses"
            card_view:layout_constraintBottom_toBottomOf="@+id/textView_losses"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="@+id/guideline_0"
            card_view:layout_constraintRight_toLeftOf="@+id/guideline_1"
            card_view:layout_constraintTop_toTopOf="@+id/textView_losses"
            card_view:srcCompat="@drawable/loss" />

        <ImageView
            android:id="@+id/imageView_losses"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/imageView_draws"
            card_view:layout_constraintBottom_toBottomOf="@+id/textView_draws"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="@+id/guideline_0"
            card_view:layout_constraintRight_toLeftOf="@+id/guideline_1"
            card_view:layout_constraintTop_toTopOf="@+id/textView_draws"
            card_view:srcCompat="@drawable/draw" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.25" />

        <ImageView
            android:id="@+id/imageView_medal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/imageView_medal"
            android:visibility="visible"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView_victories"
            card_view:layout_constraintLeft_toLeftOf="@+id/guideline_1"
            card_view:layout_constraintTop_toTopOf="@+id/imageView_victories"
            card_view:srcCompat="@drawable/medal1" />

        <TextView
            android:id="@+id/textView_highscorePlayerName"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textView_highscoreName"
            android:textStyle="bold"
            card_view:layout_constraintLeft_toRightOf="@+id/imageView_medal"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/darker_gray"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="@+id/guideline_1"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textView_highscorePlayerName" />

        <ImageView
            android:id="@+id/imageView_rounds"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/imageView_round"
            android:tint="@android:color/darker_gray"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView_losses"
            card_view:layout_constraintLeft_toLeftOf="@+id/guideline_1"
            card_view:layout_constraintTop_toTopOf="@+id/imageView_losses"
            card_view:srcCompat="@drawable/round" />

        <TextView
            android:id="@+id/textView_rounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical|start"
            android:maxEms="3"
            android:minEms="3"
            android:textColor="@android:color/darker_gray"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView_rounds"
            card_view:layout_constraintLeft_toRightOf="@+id/imageView_rounds"
            card_view:layout_constraintTop_toTopOf="@+id/imageView_rounds" />

        <ImageView
            android:id="@+id/imageView_time"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/imageView_time"
            android:tint="@android:color/darker_gray"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView_rounds"
            card_view:layout_constraintLeft_toRightOf="@+id/textView_rounds"
            card_view:layout_constraintTop_toTopOf="@+id/imageView_rounds"
            card_view:srcCompat="@drawable/time" />

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:textColor="@android:color/darker_gray"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView_time"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toRightOf="@+id/imageView_time"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/imageView_time"
            card_view:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/imageView_games"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/imageView_games"
            android:tint="@android:color/darker_gray"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView_draws"
            card_view:layout_constraintLeft_toLeftOf="@+id/guideline_1"
            card_view:layout_constraintTop_toTopOf="@+id/imageView_draws"
            card_view:srcCompat="@drawable/local" />

        <TextView
            android:id="@+id/textView_games"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:maxEms="3"
            android:minEms="3"
            android:textColor="@android:color/darker_gray"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView_games"
            card_view:layout_constraintLeft_toRightOf="@+id/imageView_games"
            card_view:layout_constraintTop_toTopOf="@+id/imageView_games"
            card_view:layout_constraintVertical_bias="0.571" />

        <ImageView
            android:id="@+id/imageView_colorOfPreference"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/imageView_color"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView_games"
            card_view:layout_constraintLeft_toRightOf="@+id/textView_games"
            card_view:layout_constraintTop_toTopOf="@+id/imageView_games"
            card_view:layout_constraintVertical_bias="0.0"
            card_view:srcCompat="@drawable/player" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart_allResults"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>